--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!-- Simple Calculator by Jayesh Karale -->
+<!-- Web-Calculator by Jayesh Karale -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simple Calculator By JayeshKarale</title>
+  <title>Web-Calculator</title>
   </head>
   <link rel="stylesheet" href="styles.css">
 <body>
